# LL-hls4ml

./: .gitignore  README.md  datasets.py  exploration.ipynb  features.py  kernel_stats.csv  main.ipynb  preprocessing.py  pyproject.toml
configs/: default.yaml
models/: cdfg_rgcn_experiment_model.pt
notebooks/: 01_eda_tabular.ipynb  02_preprocess_tensors.ipynb  03_train_rgcn.ipynb
scripts/: build_tensors.py  build_vocab.py  train.py
src/ll_hls4ml/: __init__.py  config.py
src/ll_hls4ml/data/: __init__.py  dataset.py  splits.py  tensorize.py  vocab.py
src/ll_hls4ml/features/: __init__.py  graph_stats.py  tabular.py
src/ll_hls4ml/io/: __init__.py  discovery.py  load_json.py  schema.py
src/ll_hls4ml/models/: __init__.py  registry.py  rgcn.py
src/ll_hls4ml/training/: __init__.py  loaders.py  loops.py  targets.py
src/ll_hls4ml/viz/: __init__.py  dataset.py  eda.py  training.py
